[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-audit-bot"
version = "0.1.0"
description = "FastAPI integration service for SalesBot, KIE, and Telegram admin alerts."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
